--- a/.github/workflows/attendance.yml
+++ b/.github/workflows/attendance.yml
@@ -2,11 +2,13 @@ name: attendance
 
 on:
   schedule:
-    - cron: '30 7 * * 1-5'
-    - cron: '30 12 * * 1-4'
-    - cron: '0 14 * * 1-4'
-    - cron: '0 18 * * 1-4'
-    - cron: '0 13 * * 5'
+    - cron: '30 12 * * 1-5'
+    - cron: '30 17 * * 1-4'
+    - cron: '0 19 * * 1-4'
+    - cron: '0 23 * * 1-4'
+    - cron: '0 18 * * 5'
+    
+  workflow_dispatch:
 
 jobs:
   post_to_api:
